feat & fix: create product & some error code
